chore(husky): huskys hook configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
       "@/*": ["./*"]
     }
   },
+  "exclude": ["node_modules"],
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
