--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "prepare": "husky",
+    "lint-staged": "lint-staged",
+    "check-types": "tsc --pretty --noEmit",
+    "commit": "prettier . --write && git add . && git commit"
   },
   "jest": {
     "preset": "jest-expo"
@@ -40,17 +44,30 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^22.8.7",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "lint-staged": {
+    "*.{js,tsx,ts}": "eslint"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "private": true
 }
